--- a/pages/text_length_measure_page/textLengthMeasurePage.css
+++ b/pages/text_length_measure_page/textLengthMeasurePage.css
@@ -8,9 +8,24 @@ h1 {
   background-clip: text;
   -webkit-text-fill-color: transparent;
 }
+
+.content_box {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  width: 80%;
+  height: 64vh;
+  border-radius: 4vw;
+  background-color: rgb(255, 255, 255);
+}
 .textLengthMeasurePage {
+  background: linear-gradient(90deg, #2c3ea4, #041583, #000d54);
+
+  background-size: 100% 100%;
+
+  background-repeat: no-repeat;
   width: 100%;
-  height: 90vh;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
@@ -21,16 +36,18 @@ h1 {
 }
 
 textarea {
-  width: 70vw;
-  height: 50vh;
+  border: rgb(4, 83, 255) dashed 2px;
+  border-radius: 4vw;
+  width: 80%;
+  height: 30vh;
   padding: 5%;
+}
+textarea::placeholder {
+  font-size: 2.4vw;
 }
 
 #result {
   font-size: 2.4vw;
-}
-#result:hover {
-  scale: 1.1;
 }
 
 span {
